src/components/TweetResults/components/TweetAttributes/TweetAttributes.module.scss
.container {
  background: #1b222c;

  box-shadow: inset -2px -2px 10px rgba(255, 255, 255, 0.04), inset 2px 2px 10px rgba(255, 255, 255, 0.05);
  backdrop-filter: blur(5px);

  border-radius: 14px;
  padding: 10px 20px;

  .attributes {
    position: relative;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding-left: 4rem;
    &:not(:last-child) {
      margin-bottom: 1rem;
    }

    .icon {
      position: absolute;
      left: 0;
      top: 0;
      width: 2.8rem;
      height: 2.8rem;
      img {
        width: 100%;
        height: 100%;
      }
      margin-right: 1rem;
    }

    .attribute {
      font-weight: 400;
      font-size: 1.6rem;
      line-height: 150%;

      color: #fbfbfb;

      &:not(:last-child) {
        margin-right: 0.5rem;
      }

      &.user_mention {
        &:not(:last-child) {
          margin-right: 1rem;
        }
      }
    }
  }
}

